--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "express-locallibrary-tutorial",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www"
-  },
-  "dependencies": {
-    "async": "^2.4.0",
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "express-validator": "^3.2.0",
-    "moment": "^2.18.1",
-    "mongoose": "^4.10.0",
-    "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
-  }
+    "name": "express-locallibrary-tutorial",
+    "version": "0.0.0",
+    "engines": {
+        "node": "6.10.0"
+    },
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "devstart": "nodemon ./bin/www"
+    },
+    "dependencies": {
+        "async": "^2.4.0",
+        "body-parser": "~1.17.1",
+        "cookie-parser": "~1.4.3",
+        "debug": "~2.6.3",
+        "express": "~4.15.2",
+        "express-validator": "^3.2.0",
+        "moment": "^2.18.1",
+        "mongoose": "^4.10.0",
+        "morgan": "~1.8.1",
+        "pug": "~2.0.0-beta11",
+        "serve-favicon": "~2.4.2"
+    },
+    "devDependencies": {
+        "nodemon": "^1.11.0"
+    }
 }
